<resources>
    <string name="app_name">StarCalendar</string>
    <string name="user">Username</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">About</string>
    <string name="starlist">Star List</string>
    <string name="information">Information</string>
    <string name="weather">Weather</string>
    <string name="compass">Compass</string>
    <string name="myCalendar">Calendar</string>
    <string name="eventinfo">Mercury is in retrograde</string>
    <string name="placeholder"> </string>
    <string name="confirm_add">Add Event to Calendar</string>
    <string name="subject">Object: </string>
    <string name="mass">Mass: </string>
    <string name="diametersize">Size: </string>
    <string name="gravity">Gravity: </string>
    <string name="change_city">Change City</string>
    <string name="api_key">27bba67d4f9f2258695c40a1e74c16da</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="city_default">Dublin,IE</string>
    <string name="disclaimer">All times are in relation to system time!</string>
    <string name="change">Change</string>
    <string name="city_error">Error, Change City!</string>
    <string name="moon_error">Error, Unable to load moon data!</string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset: </string>
    <string name="wind">Wind: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>
    <string name="moon">Moon</string>
    <string name="phase">Phase</string>
    <string name="fact">Fact: </string>
    <string name="outside">Outside</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="about1">This app is designed to help you observe the night sky,currently with emphasis on the moon phases.\n\nThere are options to view the weather in your location to plan before going stargazing aswell as a compass to get your orientation right.\n
    </string>
    <string name="about2">The handy calendar can help pencil events in the sky that you do not want to miss!\n\nInformation is filled with some facts about the various things you might find in our sky.\n
    </string>
    <string name="error_one">No entry found</string>
    <string name="close">X</string>


    <string-array name="spaceplan_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Moon</item>
        <item>Sun</item>
        <item>ISS</item>
        <item>Spacecraft</item>
        <item>Meteor</item>
    </string-array>

    <string-array name="spacemass_array">
        <item>3.29 × 10^23 kg</item>
        <item>4.87 × 10^24 kg</item>
        <item>5.97 × 10^24 kg</item>
        <item>6.39 × 10^23 kg</item>
        <item>7.35 × 10^22 kg</item>
        <item>1.99 × 10^30 kg</item>
        <item>417,289 kg</item>
        <item>2,030,000 kg</item>
        <item>(max) 54431 kg</item>
    </string-array>

    <string-array name="spacedim_array">
        <item>4,879 km in Diameter</item>
        <item>12,104 km in Diameter</item>
        <item>12,742 km in Diameter</item>
        <item>6,779 km in Diameter</item>
        <item>3,474 km in Diameter</item>
        <item>1.391 million km in Diameter</item>
        <item>108.5 meters by 72.8 meters</item>
        <item>8.7 m in Diameter</item>
        <item>0.003 km in Diameter</item>
    </string-array>

    <string-array name="spacegrav_array">
        <item>3.7 m/s²</item>
        <item>8.9 m/s²</item>
        <item>9.8 m/s²</item>
        <item>3.7 m/s²</item>
        <item>1.6 m/s²</item>
        <item>274 m/s²</item>
        <item>8.8 m/s²</item>
        <item>N/A</item>
        <item>0 m/s² appx</item>
    </string-array>

    <string-array name="spacedesc_array">
        <item>A year on Mercury is just 88 days long. It is also the smallest planet.</item>
        <item>Venus is the second brightest natural object in the sky. One day on Venus is longer than one year.</item>
        <item>It\'s home</item>
        <item>Mars is the fourth planet from the Sun and is the second smallest planet in the solar system. </item>
        <item>The Moon of the Earth. Does one full revolution of the Earth every 24 Hours</item>
        <item>The Sun accounts for 99.86% of the mass in the solar system. Over one million Earth\'s could fit inside the Sun.</item>
        <item>The space station has been continuously occupied since November 2000. It travels at a speed of five miles per second, orbiting Earth about every 90 minutes.</item>
        <item>The position of the Voyager 1 spacecraft is some 12.5 billion miles away.</item>
        <item>A meteoroid is a small rock or particle of debris in our solar system.The Geminids spray up to 40 meteors per hour at its peak.</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
