<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
	android:layout_gravity="center"
	android:background="@color/popup_background">

	<TextView
		android:id="@+id/close"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:layout_alignParentRight="true"
		android:gravity="center"
		android:text="@string/close"
		android:background="@drawable/event_close"
		android:textColor="@color/white"
		android:textStyle="bold"/>

	<ImageView
		android:id="@+id/objectimage"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="60dp"
		android:layout_column="1"/>

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="30dp"
		android:layout_below="@+id/objectimage"
		android:stretchColumns="2">

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

            <TextView
                android:id="@+id/Object"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/subject"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
			<TextView
				android:id="@+id/objectInfo"
				android:text="@string/placeholder"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

            <TextView
                android:id="@+id/mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/mass"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
			<TextView
				android:id="@+id/massInfo"
				android:text="@string/placeholder"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
		</TableRow>
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

            <TextView
                android:id="@+id/dimensions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/diametersize"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
			<TextView
				android:id="@+id/dimensionInfo"
				android:text="@string/placeholder"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

		</TableRow>
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

            <TextView
                android:id="@+id/gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
			<TextView
				android:id="@+id/gravityinfo"
				android:text="@string/placeholder"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

		</TableRow>
	</TableLayout>


</RelativeLayout>


