<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:layout_marginLeft="2dp"
	android:layout_marginTop="20dp"
	android:layout_marginRight="2dp"
	android:layout_marginBottom="10dp"
	android:background="@color/popup_background">

	<TextView
		android:id="@+id/close"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:layout_alignParentRight="true"
		android:background="@drawable/event_close"
		android:gravity="center"
		android:text="@string/close"
		android:textColor="@color/white"
		android:textStyle="bold" />

	<ImageView
		android:id="@+id/objectimage"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_column="1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="60dp" />

	<!--SOURCES:
	 	Table Layout = https://www.tutorialspoint.com/android/android_table_layout.htm
	 -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/objectimage"
		android:layout_marginTop="30dp"
		android:stretchColumns="2">

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/border">

			<TextView
				android:id="@+id/object"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="1"
				android:paddingLeft="5dp"
				android:text="@string/subject"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

			<TextView
				android:id="@+id/objectInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:background="@drawable/border"
				android:paddingRight="20dp"
				android:text="@string/placeholder"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/border">

			<TextView
				android:id="@+id/mass"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="1"
				android:paddingLeft="5dp"
				android:text="@string/mass"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

			<TextView
				android:id="@+id/massInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:background="@drawable/border"
				android:paddingRight="20dp"
				android:text="@string/placeholder"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/border">

			<TextView
				android:id="@+id/dimensions"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="1"
				android:paddingLeft="5dp"
				android:text="@string/diametersize"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

			<TextView
				android:id="@+id/dimensionInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:background="@drawable/border"
				android:paddingRight="20dp"
				android:text="@string/placeholder"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/border">

			<TextView
				android:id="@+id/gravity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="1"
				android:paddingLeft="5dp"
				android:text="@string/gravity"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

			<TextView
				android:id="@+id/gravityinfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:background="@drawable/border"
				android:paddingRight="20dp"
				android:text="@string/placeholder"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/border">

			<TextView
				android:id="@+id/fact"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="1"
				android:paddingLeft="5dp"
				android:text="@string/fact"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

			<TextView
				android:id="@+id/factinfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_column="2"
				android:background="@drawable/border"
				android:ellipsize="end"
				android:maxLines="100"
				android:paddingRight="20dp"
				android:text="@string/placeholder"
				android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

		</TableRow>
	</TableLayout>


</RelativeLayout>


